# nerdyversary

./: .gitignore  2021-09-06_table.md  2022-11-21_table.md  CHANGELOG.md  README.md  anniversary.ipynb  index.html  nerdyversary.html  pyproject.toml  search.js  table.md
.chglog/: config.yml
.github/workflows/: build.yml  docs.yml  tests.yml
nerdyversary/: __init__.py  __main__.py  _version.html  _version.py
