[build-system]
requires = [
	"setuptools >= 61",
	"setuptools_scm",
	"wheel"
]
build-backend = "setuptools.build_meta"

[project]
name = "nerdyversary"
description = "Package for computing nerdy anniversaries"
authors = [
	{name = "Roman Ludwig", email = "roman.ludwig@usz.ch"}
]
readme = "README.md"
requires-python = ">=3.10"
keywords = ["maths", "anniversary", "nerdy"]
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
]
dependencies = [
    "numpy",
    "sympy",
    "tabulate",
]
dynamic = ["version"]

[project.urls]
source = "https://github.com/rmnldwg/anniversary"

[project.optional-dependencies]
dev = [
    "pre-commit",
    "isort",
    "pycln",
    "pylint",
]
docs = [
    "pdoc",
]
tests = [
    "pytest",
]

[project.scripts]
nerdyversary = "nerdyversary:main"

[tool.setuptools_scm]
write_to = "nerdyversary/_version.py"
local_scheme = "no-local-version"

[tool.setuptools.dynamic]
version = {attr = "nerdyversary._version.version"}

[tool.isort]
line_length = 79
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.pycln]
all = true
